[tool.poetry]
name = "kaeden"
version = "0.1.0"
description = ""
authors = ["Eric L Frederich <eric.frederich@siemens.com>"]
readme = "README.md"
packages = [{include = "kaeden", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
